Fully remove details polyfill styling

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -171,6 +171,9 @@ summary::-webkit-details-marker {
 
 details > summary::before {
   content: '';
+  padding-right: initial;
+  font-size: initial;
+  cursor: initial;
 }
 
 summary::after {
