Maximum width for visuals

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -210,6 +210,7 @@ figure video,
 figure audio {
   display: block;
   width: 100%;
+  max-width: 100%;
   height: auto;
   outline: solid 1px var(--secondary-headline-color);
 }
