--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -14,7 +14,10 @@ head
   link(rel='icon', href='/icons/newspaper_120x120.png')
   script.
     if (!('IntersectionObserver' in window)) {
-      document.write('<script src="https://unpkg.com/intersection-observer@0.5.0/intersection-observer.js"><\/script>');
+      /* document.write('<script
+       src="https://unpkg.com/intersection-observer@0.5.0/intersection-observer.js"><\/script>'); */
+       document.write('<script
+              src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"><\/script>');
     }
     if (!('open' in document.createElement('details'))) {
       document.write('<script src="https://unpkg.com/details-element-polyfill@2.2.0/dist/details-element-polyfill.js"><\/script>');
