--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -25,4 +25,5 @@ head
     document.documentElement.style.setProperty('--main-current-width', `${window.innerWidth - 8}px`);
   script(type='module', src='/js/lazyload.mjs', defer)
   script(type='module', src='/js/main.mjs', defer)
+  script(nomodule, src='https://unpkg.com/@babel/polyfill@7.2.5/dist/polyfill.js', defer)
   script(nomodule, src='/js/bundle.js', defer)
