--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -22,6 +22,9 @@ head
     if (!('HTMLPictureElement' in window)) {
       document.write('<script src="https://unpkg.com/picturefill@3.0.3/dist/picturefill.min"><\/script>');
     }
+    if (!window.CSS.supports('--a:0')) {
+      document.write('<script src="https://unpkg.com/css-vars-ponyfill@1.16.2/dist/css-vars-ponyfill.min.js"><\/script>');
+    }
     document.documentElement.style.setProperty('--main-current-width', `${window.innerWidth - 8}px`);
   script(type='module', src='/js/lazyload.mjs', defer)
   script(type='module', src='/js/main.mjs', defer)
