--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -9,9 +9,13 @@ head
   link(rel='preload', href='/js/main.mjs', as='script', crossorigin)
   link(rel='preload', href='/img/placeholder.svg', as='image')
   link(rel='manifest', href=`${publisher ? `/${publisher.slug}` : ''}/manifest.webmanifest`)
-  link(rel='apple-touch-icon', sizes='120x120', href='/icons/newspaper_120x120.png')
-  link(rel='apple-touch-icon', sizes='144x144', href='/icons/newspaper_144x144.png')
-  link(rel='icon', href='/icons/newspaper_120x120.png')
+  if publisher
+    link(rel='apple-touch-icon', sizes=`${publisher.icon.sizes}`, href=publisher.icon.src)
+    link(rel='icon', href=publisher.icon.src)
+  else
+    link(rel='apple-touch-icon', sizes='120x120', href='/icons/newspaper_120x120.png')
+    link(rel='apple-touch-icon', sizes='144x144', href='/icons/newspaper_144x144.png')
+    link(rel='icon', href='/icons/newspaper_120x120.png')
   script.
     if (!('IntersectionObserver' in window)) {
       document.write('<script src="https://unpkg.com/intersection-observer@0.5.0/intersection-observer.js"><\/script>');
