--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -2,8 +2,8 @@ head
   meta(charset='utf-8')
   meta(name='viewport', content='width=device-width,minimum-scale=1,initial-scale=1')
   meta(http-equiv='Content-Security-Policy' content='upgrade-insecure-requests')
-  title News Progressive Web App
-  link(rel='stylesheet', href='/css/main.css')
+  title= (publisher ? publisher.name : 'News Progressive Web App')
+  link(rel='stylesheet', href=`${slug ? `/${slug}` : ''}/main.css`)
   link(rel='preload', href='/fonts/Amstelvar-Roman-VF.woff2', as='font', crossorigin)
   link(rel='preload', href='/js/lazyload.mjs', as='script', crossorigin)
   link(rel='preload', href='/js/main.mjs', as='script', crossorigin)
