--- a/public/css/main.css
+++ b/public/css/main.css
@@ -93,7 +93,7 @@ h3 {
 }
 
 @supports not (initial-letter: 2) {
-  section > p:nth-child(2):not(section > p:nth-child(2) + em):not(section > p:nth-child(2) + strong)::first-letter {
+  p:nth-child(2)::first-letter {
     font-size: 2.5em;
     float: left;
     line-height: 0.9em;
