--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,6 +100,11 @@ h3 {
   }
 }
 
+/* No initial letter treatment for italics */
+p:nth-child(2) > *::before {
+  content: "";
+}
+
 a {
   color: var(--main-color);
   text-decoration: underline;
