--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -17,21 +17,26 @@ head
     link(rel='apple-touch-icon', sizes='144x144', href='/icons/newspaper_144x144.png')
     link(rel='icon', href='/icons/newspaper_120x120.png')
   script.
+    function loadScript(src, done) {
+      var js = document.createElement('script');
+      js.src = src;
+      js.onload = done;
+      js.onerror = function() {
+        done(new Error('Failed to load script ' + src));
+      };
+      document.head.appendChild(js);
+    }
     if (!('IntersectionObserver' in window)) {
-      document.write('<script src="https://unpkg.com/intersection-observer@0.5.0/intersection-observer.js"><\/script>');
+      loadScript('https://unpkg.com/intersection-observer@0.5.0/intersection-observer.js');
     }
     if (!('open' in document.createElement('details'))) {
-      document.write('<script src="https://unpkg.com/details-element-polyfill@2.2.0/dist/details-element-polyfill.js"><\/script>');
+      loadScript('https://unpkg.com/details-element-polyfill@2.2.0/dist/details-element-polyfill.js');
     }
     if (!('HTMLPictureElement' in window)) {
-      document.write('<script src="https://unpkg.com/picturefill@3.0.3/dist/picturefill.min"><\/script>');
+      loadScript('https://unpkg.com/picturefill@3.0.3/dist/picturefill.min');
     }
     if (!window.CSS.supports('--a:0')) {
-      document.write('<script src="https://unpkg.com/css-vars-ponyfill@1.16.2/dist/css-vars-ponyfill.min.js"><\/script>');
-      window.addEventListener('load', function(e) {
-        console.log('Executing cssVars()');
-        window.cssVars();
-      });
+      loadScript('https://unpkg.com/css-vars-ponyfill@1.16.2/dist/css-vars-ponyfill.min.js', window.cssVars)
     }
     document.documentElement.style.setProperty('--main-current-width', `${window.innerWidth - 8}px`);
   script(type='module', src='/js/lazyload.mjs', defer)
