Switch loading strategy

--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -19,7 +19,7 @@ head
   script.
     function loadScript(src, done) {
       var js = document.createElement('script');
-      js.defer = true;
+      js.async = false;
       js.src = src;
       js.onload = done;
       js.onerror = function() {
